# rag-portfolio-v1

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: app.py  embed.py  ingest.py  rag.py  search.py
tests/: smoke_test.sh  test_app.py  test_ingest.py  test_rag.py
