[project]
name = "rag-portfolio-v1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.153.1",
    "google-cloud-storage>=3.10.1",
    "google-genai>=2.5.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
]
