[project]
name = "rag-portfolio-v1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-cloud-aiplatform>=1.153.1",
    "google-cloud-storage>=3.10.1",
    "google-genai>=2.5.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
